Updated content and subrepos

--- a/framework/tech-workshop/index.html
+++ b/framework/tech-workshop/index.html
@@ -9,7 +9,15 @@
 <li>How do we measure it? 3 top practices. 10 min. Write all the ways they could measure it.</li>
 <li>Discussion.</li>
 <li><p>30 min. Setting in motion so that they stay engaged.</p></li>
-<li><p>Demo.</p></li>
+<li><p>I'm crazy with Taxonomies. I think they're a philosophy meets usability domain that I really love. This exercise is specifically NOT about taxonomies.</p></li>
+<li>Demo.
+<ul>
+<li>Distribution
+<ul>
+<li>We choose binary distribution instead of client side JS distrib for instance.</li>
+<li></li>
+</ul></li>
+</ul></li>
 </ul>
 <p>What can be collected to evaluate adoption of best practice.</p>
 <ul>
@@ -20,6 +28,82 @@
 <li>Do one.</li>
 </ul></li>
 <li><h2 id="post-its-how-do-we-measure-it">Post its: How do we measure it?</h2></li>
+</ul>
+<p>Debrief</p>
+<ul>
+<li>Missed Topic discusssion. Focusing on security privacy...</li>
+<li>Clarifying what are the outputs how we're going to use them.
+<ul>
+<li>Exercise as a knowledge producing thing.</li>
+<li>Use the existing (future) site to demonstrate what the outcome will look like.</li>
+</ul></li>
+<li>Explaining where the experience of there's no more to tell, is worth staying with becuase that's past the perceived point of diminishing returns that the returns are.</li>
+<li>Delta grouping:</li>
+</ul>
+<p>Process:</p>
+<ul>
+<li>Demo:
+<ul>
+<li>Write the 3 big questions/stage of the process for everyone to refer to during the demo and after.
+<ul>
+<li>What is your area of expertise/contribution?</li>
+<li>What are the practices that tools and tool developers should and shouldn't adopt?</li>
+<li>How can you tell?
+<ul>
+<li>Sources is a good answer.</li>
+<li></li>
+</ul></li>
+</ul></li>
+<li>Then this is how we're going to use it.</li>
+</ul></li>
+<li>First cluster people by expertise.</li>
+<li>Then assign them. Clarifying where we want the value to be.</li>
+<li></li>
+</ul>
+<p>Aspects:</p>
+<ul>
+<li>Security Goals was not understood in how we intended.</li>
+<li>Iterate on language</li>
+<li>Maybe add the categories</li>
+</ul>
+<p>Metrics:</p>
+<ul>
+<li>Fuzziness between practices and metrics.</li>
+<li>&quot;How can you tell?&quot;</li>
+</ul>
+<p>Value for participants:</p>
+<ul>
+<li>Codesign: Feeling strongly, having something important to contribute and making sure it's there.</li>
+<li></li>
+</ul>
+<p>Meta</p>
+<ul>
+<li>Ask gunner.</li>
+<li>More of a workshop format. Half day.</li>
+<li>What is the value of a conference format.</li>
+</ul>
+<p>Next steps</p>
+<ul>
+<li>Write up a session report (Blog)</li>
+<li>Write something on the workshop process. (Our thoughts on to lead a metrics workshop.)</li>
+<li>Structure and post session outputs.
+<ul>
+<li>Folder for session (Raw input)</li>
+<li>Index file for outputs
+<ul>
+<li>List of aspects that were selected</li>
+<li>Ranked practices that were created</li>
+<li>Selection of practices
+<ul>
+<li>List of metrics.</li>
+</ul></li>
+</ul></li>
+</ul></li>
+<li>Meta: Come up with the structure for the next phase of review.
+<ul>
+<li>Better structure for issues/metrics file.</li>
+</ul></li>
+<li></li>
 </ul>
 </div></body><hr><div class="section get-help"><div class="container"><h3 class="section-heading">Want to join the initiative?</h3><p class="section-description">Open Integrity needs your help to provide the best and most up to date information. Get in touch to join the initiative !</p><a href="mailto://contact@openintegrity.org" class="button button-primary">Get in touch</a></div></div><div class="section categories"><div class="container"><div class="row"><div class="two columns">&nbsp;</div><div class="eight column category"><h4>Developed with ❤ by</h4><a href="https://iilab.org"><img src="/openintegrity.org/images/iilab_white.svg" class="u-max-full-width"></a><h5>Information Innovation Lab</h5><p>Applied research and development of public interest technology.</p></div><div class="two columns">&nbsp;</div></div></div></div><script>var js = document.createElement('script')
 js.src = '//' + (location.host || 'localhost').split(':')[0] + ':3000/browser-sync/browser-sync-client.js'
