--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><!--if lt IE 7<html class="ie ie6" lang="en">--><!--if IE 7<html class="ie ie7" lang="en">--><!--if IE 8<html class="ie ie8" lang="en">--><!--if (gte IE 9)|!(IE)<!--><html lang="en"> <!--
 --><html><head><meta charset="utf8"><title> &middot; Open Integrity</title><meta name="description" content=""><meta name="author" content=""><meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"><link rel="stylesheet" href="/openintegrity.org/css/skeleton.css"><link rel="stylesheet" href="/openintegrity.org/css/site.css"><!--if lt IE 9script(src="http://html5shim.googlecode.com/svn/trunk/html5.js")
---><script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script><script src="/openintegrity.org/js/site.js"></script><link rel="shortcut icon" href="/openintegrity.org/images/favicon.ico"><link rel="apple-touch-icon" href="/openintegrity.org/images/apple-touch-icon.png"><link rel="apple-touch-icon" sizes="72x72" href="/openintegrity.org/images/apple-touch-icon-72x72.png"><link rel="apple-touch-icon" sizes="114x114" href="/openintegrity.org/images/apple-touch-icon-114x114.png"><link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css"><link rel="alternate" type="application/rss+xml" title="RSS" href="{{ site.baseurl }}/atom.xml"></head><body class="hero"><div class="container"><section class="header"><h2 class="title">Open Integrity Initiative</h2><h3 class="title">Data Driven Security and Privacy</h3><div class="value-props row"><div class="four columns value-prop"><img src="images/users_pix.svg" width="30%" class="value-img">          We care about the impact of technology on at-risk and mainstream users.</div><div class="four columns value-prop"><img src="images/holistic_pix.svg" width="30%" class="value-img">          We take a holistic approach to understanding the impact of technology</div><div class="four columns value-prop"><img src="images/security_pix.svg" width="30%" class="value-img">          We believe in security and privacy by design and with transparency</div></div></section><div class="navbar-spacer"></div><nav class="navbar"><div class="container"><ul class="navbar-list"><li class="navbar-item"><a href="/openintegrity.org" class="navbar-link">Home</a><li class="navbar-item"><a href="/openintegrity.org/about/" class="navbar-link">About</a></li><li class="navbar-item"><a href="/openintegrity.org/partners/" class="navbar-link">Partners</a></li></li><li class="navbar-item"><a href="#" data-popover="#codeNavPopover" class="navbar-link">Framework</a><div id="codeNavPopover" class="popover"><ul class="popover-list"><li class="popover-item"><a href="/openintegrity.org/framework" class="popover-link">Overview</a></li><li class="popover-item"><a href="/openintegrity.org/impact" class="popover-link">Impact</a></li><li class="popover-item"><a href="/openintegrity.org/metrics" class="popover-link">Metrics</a></li><li class="popover-item"><a href="/openintegrity.org/score" class="popover-link">Score</a></li></ul></div></li><li class="navbar-item"><a href="/openintegrity.org/blog" class="navbar-link">Blog</a></li><li class="navbar-item"><a href="https://code.iilab.org/openintegrity/openintegrity.org" class="navbar-link">Source</a></li></ul></div></nav><div class="docs-section"><h1 class="docs-header"></h1><h5 id="the-open-integrity-initiative-is-booting-up.">The Open Integrity Initiative is <a href="blog/booting-up">booting up</a>.</h5>
+--><script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script><script src="/openintegrity.org/js/site.js"></script><link rel="shortcut icon" href="/openintegrity.org/images/favicon.ico"><link rel="apple-touch-icon" href="/openintegrity.org/images/apple-touch-icon.png"><link rel="apple-touch-icon" sizes="72x72" href="/openintegrity.org/images/apple-touch-icon-72x72.png"><link rel="apple-touch-icon" sizes="114x114" href="/openintegrity.org/images/apple-touch-icon-114x114.png"><link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css"><link rel="alternate" type="application/rss+xml" title="RSS" href="{{ site.baseurl }}/atom.xml"></head><body class="hero"><div class="container"><section class="header"><h2 class="title">Open Integrity Initiative</h2><h3 class="title">Data Driven Security and Privacy</h3></section><div class="navbar-spacer"></div><nav class="navbar"><div class="container"><ul class="navbar-list"><li class="navbar-item"><a href="/openintegrity.org" class="navbar-link">Home</a></li><li class="navbar-item"><a href="#" data-popover="#codeNavAbout" class="navbar-link">About</a><div id="codeNavAbout" class="popover"><ul class="popover-list"><li class="popover-item"><a href="/openintegrity.org/about" class="popover-link">Overview</a></li><li class="popover-item"><a href="/openintegrity.org/about#team" class="popover-link">Team</a></li><li class="popover-item"><a href="/openintegrity.org/about#partners" class="popover-link">Partners</a></li><li class="popover-item"><a href="/openintegrity.org/about#board" class="popover-link">Advisory Board</a></li></ul></div></li><li class="navbar-item"><a href="#" data-popover="#codeNavPopover" class="navbar-link">Approach</a><div id="codeNavPopover" class="popover"><ul class="popover-list"><li class="popover-item"><a href="/openintegrity.org/framework" class="popover-link">Overview</a></li><li class="popover-item"><a href="/openintegrity.org/impact" class="popover-link">Impact</a></li><li class="popover-item"><a href="/openintegrity.org/practices" class="popover-link">Practices</a></li><li class="popover-item"><a href="#" class="popover-link">Metrics (soon)</a></li><li class="popover-item"><a href="#" class="popover-link">Scores (soon)</a></li></ul></div></li><li class="navbar-item"><a href="/openintegrity.org/blog" class="navbar-link">Blog</a></li><li class="navbar-item"><a href="/openintegrity.org/join" class="navbar-link">Join</a></li></ul></div></nav><div class="docs-section"><h1 class="docs-header"></h1><h5 id="the-open-integrity-initiative-is-booting-up.">The Open Integrity Initiative is <a href="blog/booting-up">booting up</a>.</h5>
 <p>The platform aims to provide <strong>reliable and evidence based</strong> answers to questions such as:</p>
 <ul>
 <li>Which tools are open source?</li>
@@ -11,30 +11,56 @@
 </ul>
 <p>You can read more <a href="about">about the project</a>.</p>
 <hr />
-<h5 id="how-can-you-get-involved">How can you get involved?</h5>
-<p>If you're collecting data or doing research on security and privacy then we'd like to hear about your work! Here are some of the measurements we're interested in:</p>
+<h5 id="get-involved">Get Involved</h5>
+<p>If you're collecting data or doing research on security and privacy then we'd like to hear about your work! We're inviting a range of experts to contribute to the design of the index and identifying best practices in the following key areas:</p>
+<div class="row">
+<div class="one-third column category">
+<h6 id="technology">Technology</h6>
+<ul>
+<li>Code Quality</li>
+<li>Architecture</li>
+<li>Vulnerabilities</li>
+</ul>
+</div>
+<div class="one-third column category">
+<h6 id="policy">Policy</h6>
+<ul>
+<li>Corporate Accountability</li>
+<li>Terms of Service</li>
+<li>Transparency reporting</li>
+</ul>
+</div>
+<div class="one-third column category">
+<h6 id="design">Design</h6>
+<ul>
+<li>User Experience</li>
+<li>Translations</li>
+<li>User Education</li>
+</ul>
+</div>
+</div>
+<hr />
+<h5 id="what-were-working-on">What we're working on</h5>
 <div class="row">
 <div class="one-half column category">
+<p>We're busy:</p>
 <ul>
-<li>Project level metrics and metadata.</li>
-<li>Package and Libraries metrics (for instance around dependencies)</li>
-<li>Infrastructure metrics</li>
-<li>Documentation metrics</li>
-<li>Localisation metrics</li>
-<li>Usability metrics</li>
+<li>assembling our team and our advisory board</li>
+<li>structuring the participation framework</li>
+<li>designing the technical architecture and web application design</li>
 </ul>
 </div>
 <div class="one-half column category">
+<p>Take a peek into our current thinking on design:</p>
 <ul>
-<li>User review metrics</li>
-<li>Legal metrics</li>
-<li>Human Rights Policies and Practices metrics (Ranking Digital Rights)</li>
-<li>Security audit metrics</li>
-<li>Net Neutrality</li>
+<li><a href="design/sitemap-2">Sitemap</a></li>
+<li><a href="design/index">Index Page Information Architecture</a></li>
+<li><a href="design/entry">Entry Page Information Architecture</a></li>
+<li><a href="design/mockup">Mockup Site</a></li>
 </ul>
 </div>
 </div>
-</div><div class="row links"><small><div class="utilities u-pull-right"><a href="https://code.iilab.org/openintegrity/openintegrity.org/edit/master/index.md">Edit</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/commits/master/index.md">Changes</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/tree/master/index.md">Source</a></div></small></div><hr><div class="related"><h6 class="docs-header">Recent Blog Posts</h6><ul class="related-posts"><li><a href="/openintegrity.org/blog/internet-freedom-festival">Impact Workshop at the IFF in Valencia</a><!-- small= moment(post.date).format("%Y-%m-%j")--></li><li><a href="/openintegrity.org/blog/booting-up">Booting up the Open Integrity Index</a><!-- small= moment(post.date).format("%Y-%m-%j")--></li></ul></div></div></body><hr><div class="section get-help"><div class="container"><h3 class="section-heading">Want to join the initiative?</h3><p class="section-description">Open Integrity needs your help to provide the best and most up to date information. Get in touch to join the initiative !</p><a href="mailto://contact@openintegrity.org" class="button button-primary">Get in touch</a></div></div><div class="section categories"><div class="container"><div class="row"><div class="two columns">&nbsp;</div><div class="eight column category"><h4>Developed with ❤ by</h4><a href="https://iilab.org"><img src="/openintegrity.org/images/iilab_white.svg" class="u-max-full-width"></a><h5>Information Innovation Lab</h5><p>Applied research and development of public interest technology.</p></div><div class="two columns">&nbsp;</div></div></div></div><script>var js = document.createElement('script')
+</div><div class="row links"><small><div class="utilities u-pull-right"><a href="https://code.iilab.org/openintegrity/openintegrity.org/edit/master/index.md">Edit</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/commits/master/index.md">Changes</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/tree/master/index.md">Source</a></div></small></div><hr><div class="related"><h5>Recent Blog Posts</h5><ul class="related-posts"><li><a href="/openintegrity.org/blog/internet-freedom-festival">Impact Workshop at the IFF in Valencia</a><!-- small= moment(post.date).format("%Y-%m-%j")--> <small>Tue Mar 08 2016 01:00:00 GMT+0100 (CET)</small></li><li><a href="/openintegrity.org/blog/booting-up">Booting up the Open Integrity Index</a><!-- small= moment(post.date).format("%Y-%m-%j")--> <small>Tue Mar 01 2016 01:00:00 GMT+0100 (CET)</small></li></ul></div></div></body><hr><div class="section get-help"><div class="container"><h3 class="section-heading">Want to join the initiative?</h3><p class="section-description">Open Integrity needs your help to provide the best and most up to date information. Get in touch to join the initiative !</p><a href="mailto://contact@openintegrity.org" class="button button-primary">Get in touch</a></div></div><div class="section categories"><div class="container"><div class="row"><div class="two columns">&nbsp;</div><div class="eight column category"><h4>Developed with ❤ by</h4><a href="https://iilab.org"><img src="/openintegrity.org/images/iilab_white.svg" class="u-max-full-width"></a><h5>Information Innovation Lab</h5><p>Applied research and development of public interest technology.</p></div><div class="two columns">&nbsp;</div></div></div></div><script>var js = document.createElement('script')
 js.src = '//' + (location.host || 'localhost').split(':')[0] + ':3000/browser-sync/browser-sync-client.js'
 document.body.appendChild(js)
 </script></html>
