Building with recent changes

--- a/framework/index.html
+++ b/framework/index.html
@@ -9,14 +9,12 @@
 <li>How should the <strong>scoring</strong> be determined, i.e. in which way can the fulfilment of certain criteria be aggregated into a score which will reflect end-user concerns and risks?</li>
 </ul>
 <p><img src="../images/framework.png" /></p>
-<p>Some crosscutting issues are:</p>
+<h2 id="what-does-success-means-for-us">What does success means for us?</h2>
 <ul>
-<li>Data Demand and Supply. Mechanisms to help capture where the demand is:
-<ul>
-<li>for our data consumers</li>
-<li>and for our data consumer's end-users</li>
-</ul></li>
-<li></li>
+<li>Our data is <strong>reliable and up to date</strong> as well as categorised appropriately.</li>
+<li>Our <strong>audience is engaging and contributing</strong> their expertise and data.</li>
+<li>Tool <strong>developers are adopting best practices</strong>.</li>
+<li>Educators and advocates are <strong>using our data</strong>.</li>
 </ul>
 </div></body><hr><div class="section get-help"><div class="container"><h3 class="section-heading">Want to join the initiative?</h3><p class="section-description">Open Integrity needs your help to provide the best and most up to date information. Get in touch to join the initiative !</p><a href="mailto://contact@openintegrity.org" class="button button-primary">Get in touch</a></div></div><div class="section categories"><div class="container"><div class="row"><div class="two columns">&nbsp;</div><div class="eight column category"><h4>Developed with ❤ by</h4><a href="https://iilab.org"><img src="/openintegrity.org/images/iilab_white.svg" class="u-max-full-width"></a><h5>Information Innovation Lab</h5><p>Applied research and development of public interest technology.</p></div><div class="two columns">&nbsp;</div></div></div></div><script>var js = document.createElement('script')
 js.src = '//' + (location.host || 'localhost').split(':')[0] + ':3000/browser-sync/browser-sync-client.js'
