--- a/framework/workflow/index.html
+++ b/framework/workflow/index.html
@@ -5,7 +5,10 @@
 <ul>
 <li><a href="#use-cases">Use cases</a>
 <ul>
-<li><a href="#community-of-practice-participants">Community of Practice participants</a></li>
+<li><a href="#community-of-practice-participants">Community of Practice participants</a>
+<ul>
+<li><a href="#practice-lifecycle">Practice lifecycle</a></li>
+</ul></li>
 <li><a href="#interested-person">Interested Person</a></li>
 <li><a href="#metric-lifecycle">Metric lifecycle</a></li>
 <li><a href="#source-lifecycle">Source lifecycle</a></li>
@@ -24,7 +27,7 @@
 <ul>
 <li>Impact reporters</li>
 <li>Practice debaters</li>
-<li>Metrics developers</li>
+<li>Metrics developers / Measurement partners</li>
 <li>Data contributors or reviewers</li>
 </ul>
 <p>Trying to reuse existing collaboration infrastructure capabilities on Gitlab in order to minimise the development of workflow software or use of dedicated software.</p>
@@ -57,10 +60,22 @@
 <li>Visual Language and Iconography Best Practices for Security and Privacy</li>
 </ul></li>
 </ul></li>
-<li>After clicking on the &quot;User Experience&quot; Community of Practice link, the user should see a page that's grabbing data from the issue tracker that could be a cross between a Discourse Topic page, a Github Issue list and a Wiki (Also see <a href="http://noahraford.com/?p=695">How to Build a Collective Intelligence Platform to Crowdsource Almost Anything</a>):
+<li>After clicking on the &quot;User Experience&quot; Community of Practice link, the user should see a page that's grabbing data from the issue tracker that could be a cross between a Discourse Topic page, a Github Issue list and a Wiki (Also see <a href="http://noahraford.com/?p=695">How to Build a Collective Intelligence Platform to Crowdsource Almost Anything</a>)</li>
+</ul>
+<h3 id="practice-lifecycle">Practice lifecycle</h3>
+<blockquote>
+<p>e.g</p>
+</blockquote>
 <ul>
-<li></li>
+<li>Practice : Tech - Infrastructure &quot;An internal registry should be setup which rebuilds containers from source.&quot;</li>
+<li>[When scaling add a pre-moderation step with a notification to a moderator group]</li>
+<li>This should alert subscribed CoP participants. Including
+<ul>
+<li>Who submitted this.</li>
+<li>A short title.</li>
+<li>A call to action. (&quot;Review&quot;)</li>
 </ul></li>
+<li>There should be some rules for when Practices are moving to the next step.</li>
 </ul>
 <h2 id="interested-person">Interested Person</h2>
 <blockquote>
