--- a/join/index.html
+++ b/join/index.html
@@ -5,6 +5,13 @@
 <li>Follow us</li>
 <li>Give us some feedback</li>
 </ul>
+<p><a href="https://twitter.com/openintegrity">twitter</a><br />
+<script type="text/javascript">
+<!--
+h='&#x6f;&#112;&#x65;&#110;&#x69;&#110;&#116;&#x65;&#x67;&#114;&#x69;&#116;&#x79;&#46;&#x6f;&#114;&#x67;';a='&#64;';n='&#x2f;&#x2f;&#x63;&#x6f;&#110;&#116;&#x61;&#x63;&#116;';e=n+a+h;
+document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'" clas'+'s="em' + 'ail">'+'&#x65;&#x6d;&#x61;&#x69;&#108;'+'<\/'+'a'+'>');
+// -->
+</script><noscript>&#x65;&#x6d;&#x61;&#x69;&#108;&#32;&#40;&#x2f;&#x2f;&#x63;&#x6f;&#110;&#116;&#x61;&#x63;&#116;&#32;&#x61;&#116;&#32;&#x6f;&#112;&#x65;&#110;&#x69;&#110;&#116;&#x65;&#x67;&#114;&#x69;&#116;&#x79;&#32;&#100;&#x6f;&#116;&#32;&#x6f;&#114;&#x67;&#x29;</noscript></p>
 <h1 id="contribute">Contribute</h1>
 <p>We invite <strong>experts which understand end-user security and privacy</strong> through a range of practices to <strong>join us</strong> and help:</p>
 <ul>
@@ -22,7 +29,7 @@
 <blockquote>
 <p>Are you a <strong>researcher</strong>, a <strong>team</strong> or an <strong>organisation</strong> surveying or <strong>collecting data on security and privacy best practices</strong>? Do you use <strong>free and open source software</strong> collector agents, or <strong>open data workflows</strong> to collect qualitative data? Do you publish your data with an <strong>open data licence</strong>.</p>
 </blockquote>
-<p>Then [<strong>read on to find out more about becoming an Open Integrity Measurement Partner</strong>](framework/partnerships.</p>
+<p>Then <a href="framework/partnerships"><strong>read on to find out more about becoming an Open Integrity Measurement Partner</strong></a>.</p>
 </div></div></body><hr><div class="section get-help"><div class="container"><h3 class="section-heading">Want to join the initiative?</h3><p class="section-description">Open Integrity needs your help to provide the best and most up to date information. Get in touch to join the initiative !</p><a href="mailto://contact@openintegrity.org" class="button button-primary">Get in touch</a></div></div><div class="section categories"><div class="container"><div class="row"><div class="two columns">&nbsp;</div><div class="eight column category"><h4>Developed with ❤ by</h4><a href="https://iilab.org"><img src="/openintegrity.org/images/iilab_white.svg" class="u-max-full-width"></a><h5>Information Innovation Lab</h5><p>Applied research and development of public interest technology.</p></div><div class="two columns">&nbsp;</div></div></div></div><script>var js = document.createElement('script')
 js.src = '//' + (location.host || 'localhost').split(':')[0] + ':3000/browser-sync/browser-sync-client.js'
 document.body.appendChild(js)
