Removed browser sync

--- a/framework/workflow/specifications/index.html
+++ b/framework/workflow/specifications/index.html
@@ -20,6 +20,10 @@
 <li><a href="#moderator">Moderator</a></li>
 </ul></li>
 <li><a href="#features">Features</a></li>
+<li><a href="#bottom-up-specs">Bottom Up specs</a>
+<ul>
+<li><a href="#pull-requests">Pull Requests</a></li>
+</ul></li>
 </ul>
 <!-- /MarkdownTOC -->
 <h2 id="spaces">Spaces</h2>
@@ -86,9 +90,14 @@
 <h1 id="features">Features</h1>
 <ul>
 <li>Add a form as part of the Prose new document creation.</li>
+</ul>
+<h1 id="bottom-up-specs">Bottom Up specs</h1>
+<p>Starting from existing features in the content as code stack, how do they apply to the OII Framework?</p>
+<h2 id="pull-requests">Pull Requests</h2>
+<p>Could be used for:</p>
+<ul>
+<li>a particular event where information needs to be processed</li>
+<li>a document that's parsed or another</li>
 <li></li>
 </ul>
-</div></body><hr><div class="section get-help"><div class="container"><h3 class="section-heading">Want to join the initiative?</h3><p class="section-description">Open Integrity needs your help to provide the best and most up to date information. Get in touch to join the initiative !</p><a href="mailto:contact@openintegrity.org" class="button button-primary">Get in touch</a></div></div><div class="section categories"><div class="container"><div class="row"><div class="two columns">&nbsp;</div><div class="eight column category"><h4>Developed with ❤ by</h4><a href="https://iilab.org"><img src="/openintegrity.org/images/iilab_white.svg" class="u-max-full-width"></a><h5>Information Innovation Lab</h5><p>Applied research and development of public interest technology.</p></div><div class="two columns">&nbsp;</div></div></div></div><script>var js = document.createElement('script')
-js.src = '//' + (location.host || 'localhost').split(':')[0] + ':3000/browser-sync/browser-sync-client.js'
-document.body.appendChild(js)
-</script></html>
+</div></body><hr><div class="section get-help"><div class="container"><h3 class="section-heading">Want to join the initiative?</h3><p class="section-description">Open Integrity needs your help to provide the best and most up to date information. Get in touch to join the initiative !</p><a href="mailto:contact@openintegrity.org" class="button button-primary">Get in touch</a></div></div><div class="section categories"><div class="container"><div class="row"><div class="two columns">&nbsp;</div><div class="eight column category"><h4>Developed with ❤ by</h4><a href="https://iilab.org"><img src="/openintegrity.org/images/iilab_white.svg" class="u-max-full-width"></a><h5>Information Innovation Lab</h5><p>Applied research and development of public interest technology.</p></div><div class="two columns">&nbsp;</div></div></div></div></html>
