--- a/framework/workflow/index.html
+++ b/framework/workflow/index.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html><!--if lt IE 7<html class="ie ie6" lang="en">--><!--if IE 7<html class="ie ie7" lang="en">--><!--if IE 8<html class="ie ie8" lang="en">--><!--if (gte IE 9)|!(IE)<!--><html lang="en"> <!--
 --><html><head><meta charset="utf8"><title> &middot; Open Integrity</title><meta name="description" content=""><meta name="author" content=""><meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"><link rel="stylesheet" href="/openintegrity.org/css/skeleton.css"><link rel="stylesheet" href="/openintegrity.org/css/site.css"><!--if lt IE 9script(src="http://html5shim.googlecode.com/svn/trunk/html5.js")
 --><script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script><script src="/openintegrity.org/js/anchor.min.js"></script><script src="/openintegrity.org/js/site.js"></script><link rel="shortcut icon" href="/openintegrity.org/images/favicon.ico"><link rel="apple-touch-icon" href="/openintegrity.org/images/apple-touch-icon.png"><link rel="apple-touch-icon" sizes="72x72" href="/openintegrity.org/images/apple-touch-icon-72x72.png"><link rel="apple-touch-icon" sizes="114x114" href="/openintegrity.org/images/apple-touch-icon-114x114.png"><link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css"><link rel="alternate" type="application/rss+xml" title="RSS" href="{{ site.baseurl }}/atom.xml"></head><body class="has-docked-nav"><div class="container"><div class="navbar-spacer"></div><nav class="navbar"><div class="container"><ul class="navbar-list"><li class="navbar-item"><a href="/openintegrity.org" class="navbar-link">Home</a></li><li class="navbar-item"><a href="#" data-popover="#codeNavAbout" class="navbar-link">About</a><div id="codeNavAbout" class="popover"><ul class="popover-list"><li class="popover-item"><a href="/openintegrity.org/about" class="popover-link">Overview</a></li><li class="popover-item"><a href="/openintegrity.org/about#team" class="popover-link">Team</a></li><li class="popover-item"><a href="/openintegrity.org/about#partners" class="popover-link">Partners</a></li><li class="popover-item"><a href="/openintegrity.org/about#board" class="popover-link">Advisory Board</a></li></ul></div></li><li class="navbar-item"><a href="#" data-popover="#codeNavPopover" class="navbar-link">Approach</a><div id="codeNavPopover" class="popover"><ul class="popover-list"><li class="popover-item"><a href="/openintegrity.org/framework" class="popover-link">Overview</a></li><li class="popover-item"><a href="/openintegrity.org/impact" class="popover-link">Impact</a></li><li class="popover-item"><a href="/openintegrity.org/practices" class="popover-link">Practices</a></li><li class="popover-item"><a href="#" class="popover-link">Metrics (soon)</a></li><li class="popover-item"><a href="#" class="popover-link">Scores (soon)</a></li></ul></div></li><li class="navbar-item"><a href="/openintegrity.org/blog" class="navbar-link">Blog</a></li><li class="navbar-item"><a href="/openintegrity.org/join" class="navbar-link">Join</a></li></ul></div></nav><div class="row links"><small><div class="crumb u-pull-left"><a href="/openintegrity.org">Home</a> / <a href="/openintegrity.org/framework/">Framework</a>  / Workflow</div><div class="utilities u-pull-right"><a href="https://code.iilab.org/openintegrity/framework/edit/master/workflow/index.md">Edit</a> - <a href="https://code.iilab.org/openintegrity/framework/commits/master/workflow/index.md">Changes</a> - <a href="https://code.iilab.org/openintegrity/framework/tree/master/workflow/index.md">Source</a></div></small></div><h1 id="workflows">Workflows</h1>
-<!-- MarkdownTOC -->
+<!-- MarkdownTOC depth=3 -->
 <ul>
 <li><a href="#use-cases">Use cases</a>
 <ul>
-<li><a href="#framework-taking-stock-of-the-evolution-of-the-threat-landscape">Framework: Taking stock of the evolution of the Threat Landscape</a></li>
-<li><a href="#data-getting-to-the-layers-behind-a-single-data-point">Data: Getting to the layers behind a single data point</a></li>
-<li><a href="#framework-community-of-practice-participants">Framework: Community of Practice participants</a>
+<li><a href="#framework">Framework</a>
 <ul>
-<li><a href="#practice-lifecycle">Practice lifecycle</a></li>
+<li><a href="#taking-stock-of-the-evolution-of-the-threat-landscape">Taking stock of the evolution of the Threat Landscape</a></li>
+<li><a href="#practicioner-contributing-to-best-practice-discussion">Practicioner contributing to best practice discussion</a></li>
 </ul></li>
-<li><a href="#interested-person">Interested Person</a></li>
+<li><a href="#measurement">Measurement</a>
+<ul>
 <li><a href="#metric-lifecycle">Metric lifecycle</a></li>
 <li><a href="#source-lifecycle">Source lifecycle</a></li>
 </ul></li>
-<li><a href="#user-stories">User Stories</a>
+<li><a href="#data">Data</a>
 <ul>
-<li><a href="#approach">Approach</a></li>
+<li><a href="#getting-to-the-layers-behind-a-single-data-point">Getting to the layers behind a single data point</a></li>
+<li><a href="#contributing-to-the-data-coverage-and-quality">Contributing to the Data coverage and Quality</a></li>
 </ul></li>
-<li><a href="#implementation">Implementation</a>
-<ul>
-<li><a href="#platform">Platform</a></li>
 </ul></li>
 </ul>
 <!-- /MarkdownTOC -->
@@ -34,8 +32,12 @@
 </ul>
 <p>Trying to reuse existing collaboration infrastructure capabilities on Gitlab in order to minimise the development of workflow software or use of dedicated software.</p>
 <h1 id="use-cases">Use cases</h1>
-<h2 id="framework-taking-stock-of-the-evolution-of-the-threat-landscape">Framework: Taking stock of the evolution of the Threat Landscape</h2>
-<p><strong>Framework User: From Impact story to Measurement Data</strong></p>
+<h2 id="framework">Framework</h2>
+<h3 id="taking-stock-of-the-evolution-of-the-threat-landscape">Taking stock of the evolution of the Threat Landscape</h3>
+<p><strong>Framework User</strong></p>
+<blockquote>
+<p>From Impact story to Measurement Data</p>
+</blockquote>
 <p>Impact</p>
 <ul>
 <li>User submits new story about Iran 2FA hacking -&gt; Impact (partner) <a href="https://code.iilab.org/openintegrity/framework/issues/1">#1</a> <a href="https://code.iilab.org/openintegrity/framework/issues/2">#2</a> <a href="https://code.iilab.org/openintegrity/framework/issues/4">#4</a></li>
@@ -56,8 +58,64 @@
 <li>Discussion of potential measurement approaches -&gt; Metrics (measurement)</li>
 <li>Development of collection methodologies or collection agent proof-of-concepts -&gt; Metrics (collection) <a href="https://code.iilab.org/openintegrity/framework/issues/8">#10</a></li>
 </ul>
-<h2 id="data-getting-to-the-layers-behind-a-single-data-point">Data: Getting to the layers behind a single data point</h2>
-<p><strong>Data Consumer: From Data point to Impact story</strong></p>
+<h3 id="practicioner-contributing-to-best-practice-discussion">Practicioner contributing to best practice discussion</h3>
+<p><strong>Community of Practice participants</strong></p>
+<blockquote>
+<p>Aims to explore the issues and understand at a glance what are the type of conversations taking place, what needs attention, and things that might be worth following or engaging on.</p>
+</blockquote>
+<ul>
+<li>OII Team shares a link to the larger community of practice &quot;category&quot; entry point /practices/design/ ?)</li>
+<li>The page explains the shared key principles of the Framework ( <code>: [](/framework/index.short)</code>) and of the Community of Practice approach <code>: [](/practices/index.short</code> and goes into more details of the interaction between this particular community of practice (what does &quot;Design&quot; mean here) and Open Integrity (why is design important to user security and privacy)</li>
+<li>The call to action should be ordered from the most general need to the most specific (where as on the webapp it should probably be reversed)
+<ul>
+<li>Help organise the Design Practice ongoing consultation</li>
+<li>Participate in conversations about
+<ul>
+<li>User Experience Best Practice for Security and Privacy
+<ul>
+<li>Surface info about:
+<ul>
+<li>Current thread tagged for &quot;review?&quot;</li>
+<li>Participation metrics? (Could be from the RightsCon session)</li>
+<li>A current theme?</li>
+</ul></li>
+</ul></li>
+<li>Translation and Localisation Best Practices for Security and Privacy</li>
+<li>Visual Language and Iconography Best Practices for Security and Privacy</li>
+</ul></li>
+</ul></li>
+<li>After clicking on the &quot;User Experience&quot; Community of Practice link, the user should see a page that's grabbing data from the issue tracker that could be a cross between a Discourse Topic page, a Github Issue list and a Wiki (Also see <a href="http://noahraford.com/?p=695">How to Build a Collective Intelligence Platform to Crowdsource Almost Anything</a>)</li>
+</ul>
+<h4 id="practice-lifecycle">Practice lifecycle</h4>
+<blockquote>
+<p>e.g</p>
+</blockquote>
+<ul>
+<li>Practice : Tech - Infrastructure &quot;An internal registry should be setup which rebuilds containers from source.&quot;</li>
+<li>[When scaling add a pre-moderation step with a notification to a moderator group]</li>
+<li>This should alert subscribed CoP participants. Including
+<ul>
+<li>Who submitted this.</li>
+<li>A short title.</li>
+<li>A call to action. (&quot;Review&quot;)</li>
+</ul></li>
+<li>There should be some rules for when Practices are moving to the next step.</li>
+</ul>
+<h2 id="measurement">Measurement</h2>
+<h3 id="metric-lifecycle">Metric lifecycle</h3>
+<blockquote>
+<p>From the idea to the data collection and publication</p>
+</blockquote>
+<h3 id="source-lifecycle">Source lifecycle</h3>
+<blockquote>
+<p>From the suggestion to the collection and publication</p>
+</blockquote>
+<h2 id="data">Data</h2>
+<h3 id="getting-to-the-layers-behind-a-single-data-point">Getting to the layers behind a single data point</h3>
+<p><strong>Data Consumer</strong></p>
+<blockquote>
+<p>From Data point to Impact story**</p>
+</blockquote>
 <ul>
 <li>Data Consumer looks up Skype</li>
 <li>They see a data point on 2FA availability which says that it is &quot;only available with a Microsoft account&quot;.</li>
@@ -84,66 +142,62 @@
 <li>Stories: Which reported stories fall under this attack pattern category.</li>
 </ul></li>
 </ul>
-<h2 id="framework-community-of-practice-participants">Framework: Community of Practice participants</h2>
-<blockquote>
-<p>Eg. Second Muse</p>
+<h3 id="contributing-to-the-data-coverage-and-quality">Contributing to the Data coverage and Quality</h3>
+<p>For more high level design thinking about this see:</p>
 <ul>
-<li>Aims are to explore the issues and understand at a glance what are the type of conversations taking place, what needs attention, and things that might be worth following or engaging on.</li>
+<li><a href="https://the-engine-room.github.io/library/microtasking/">Engine Room Microtasking research</a></li>
+<li><a href="/framework/workflow/incentives">Incentives document</a></li>
 </ul>
-</blockquote>
+<h4 id="review-triggers">Review Triggers</h4>
+<p>A number of data related events could trigger the need for a review. Here are some example of event types (which could all be subscribed to independently, or by different groups of users)</p>
 <ul>
-<li>OII Team shares a link to the larger community of practice &quot;category&quot; entry point /practices/design/ ?)</li>
-<li>The page explains the shared key principles of the Framework ( <code>: [](/framework/index.short)</code>) and of the Community of Practice approach <code>: [](/practices/index.short</code> and goes into more details of the interaction between this particular community of practice (what does &quot;Design&quot; mean here) and Open Integrity (why is design important to user security and privacy)</li>
-<li>The call to action should be ordered from the most general need to the most specific (where as on the webapp it should probably be reversed)
-<ul>
-<li>Help organise the Design Practice ongoing consultation</li>
-<li>Participate in conversations about
-<ul>
-<li>User Experience Best Practice for Security and Privacy
-<ul>
-<li>Surface info about:
-<ul>
-<li>Current thread tagged for &quot;review?&quot;</li>
-<li>Participation metrics? (Could be from the RightsCon session)</li>
-<li>A current theme?</li>
-</ul></li>
-</ul></li>
-<li>Translation and Localisation Best Practices for Security and Privacy</li>
-<li>Visual Language and Iconography Best Practices for Security and Privacy</li>
-</ul></li>
-</ul></li>
-<li>After clicking on the &quot;User Experience&quot; Community of Practice link, the user should see a page that's grabbing data from the issue tracker that could be a cross between a Discourse Topic page, a Github Issue list and a Wiki (Also see <a href="http://noahraford.com/?p=695">How to Build a Collective Intelligence Platform to Crowdsource Almost Anything</a>)</li>
+<li>A new tool has been submitted</li>
+<li>The underlying source has changed (like a watched web page) making a data point &quot;stale&quot;</li>
+<li>A dispute occurs.</li>
+<li>The overall coverage or freshness metrics are below a certain threshold.</li>
+<li>A bounty is made available.</li>
 </ul>
-<h3 id="practice-lifecycle">Practice lifecycle</h3>
-<blockquote>
-<p>e.g</p>
-</blockquote>
+<p>There should be clear signage about:</p>
 <ul>
-<li>Practice : Tech - Infrastructure &quot;An internal registry should be setup which rebuilds containers from source.&quot;</li>
-<li>[When scaling add a pre-moderation step with a notification to a moderator group]</li>
-<li>This should alert subscribed CoP participants. Including
+<li>the type of expertise needed to contribute to this particular trigger</li>
+<li>maybe the time it will take to contribute</li>
+</ul>
+<h4 id="browsing-reviewer">Browsing Reviewer</h4>
+<p>They visit the site because they've heard about it and are curious. There should be a number of call for action on the page:</p>
 <ul>
-<li>Who submitted this.</li>
-<li>A short title.</li>
-<li>A call to action. (&quot;Review&quot;)</li>
+<li>a few &quot;Join&quot; or &quot;Contribute&quot; buttons leading to
+<ul>
+<li>The current [join](page</li>
 </ul></li>
-<li>There should be some rules for when Practices are moving to the next step.</li>
+<li>stale/disputed/empty data points should be marked and have a call to action (including to put a bounty on something that someone would like)</li>
+</ul>
+<h4 id="engaged-reviewer">Engaged Reviewer</h4>
+<p>A user, another reviewer or the platform's social media feed create engagement with potential reviewers.</p>
+<ul>
+<li>They might receive a social media alert that a data point needs review on the platform.</li>
+<li>They should land on a page which show the relevant data point and:
+<ul>
+<li>Describes the actions that need to be undertaken (allowing to click through to do the work)</li>
+<li>Surface a few other potential tasks (allowing to engage others in their network that might want to help)</li>
+<li>They might be able to &quot;Grab&quot; it - to show someone is working on it (possibly publicly)</li>
+</ul></li>
+<li>Once they completed the task, they</li>
+</ul>
+<h4 id="subscribed-reviewer">Subscribed Reviewer</h4>
+<p>They have registered as a reviewer and they can configure their notifications to receive:</p>
+<ul>
+<li>regularly (immediately, daily, weekly)</li>
+<li>a number of (one, batch of 5 or 10)</li>
+<li>specific event type/review triggers</li>
 </ul>
 <!--
 
-## Interested Person
+#### Interested Person
 > E.g. Board member candidate, potential reviewer, funder,...
 
 Could see a Kanban view of the main components of the project with swimlanes as gitlab milestones (used as a layers because of the ongoing nature of the project)?
 
-## Metric lifecycle
-> From the idea to the data collection and publication 
-
-
-## Source lifecycle
-> From the suggestion to the collection and publication
-
-# User Stories
+#### User Stories
 
 > Should be a transcluded view of gitlab issues `: [](=issues tag:"stories")` 
 
@@ -157,7 +211,7 @@ As a member of the Impact Group, I can link to and tag articles and reports that
 
 As a member of the Impact Group, I can easily learn of new additions to the platform that are relevant to my expertise or to the communities with which I work
 
-## Approach
+#### Approach
 
  - Iterate. It should be easy to draft content including folder structure, with loosely linked, sparse files.
  - Release early and often. There should be minimal barriers to releasing work in progress. 
@@ -169,7 +223,7 @@ As a member of the Impact Group, I can easily learn of new additions to the plat
 >  - Calcification: structures don't evolve because of the cost of refactoring repos/folder/files.
 >  - 
 
-# Implementation
+#### Implementation
 
  - Draft/Published
  - Draft/Ready for Review/In Review/Reviewed/...
@@ -183,7 +237,7 @@ As a member of the Impact Group, I can easily learn of new additions to the plat
      + The password could be changed when there is too much abuse... 
      + Information should be provided about the Guest account (such as what's happening with the log data and other consultation metrics) 
 
-## Platform
+##### Platform
 
 Evaluation of assembl vs a content as code approach.
 
