--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="one-third column category">
 <h6 id="technology">Technology</h6>
 <ul>
-<li>Code Quality</li>
+<li><a href="#" title="Current Focus"><strong>Dependency Management</strong></a></li>
 <li>Architecture</li>
 <li>Vulnerabilities</li>
 </ul>
@@ -25,17 +25,17 @@
 <div class="one-third column category">
 <h6 id="policy">Policy</h6>
 <ul>
+<li><a href="#" title="Current Focus"><strong>Terms of Service</strong></a></li>
 <li>Corporate Accountability</li>
-<li>Terms of Service</li>
 <li>Transparency reporting</li>
 </ul>
 </div>
 <div class="one-third column category">
 <h6 id="design">Design</h6>
 <ul>
+<li><a href="#" title="Current Focus"><strong>Default Settings</strong></a></li>
 <li>User Experience</li>
 <li>Translations</li>
-<li>User Education</li>
 </ul>
 </div>
 </div>
@@ -56,9 +56,8 @@
 <div class="one-half column category">
 <p>Take a peek into our current thinking on design:</p>
 <ul>
+<li><a href="framework/workflow">Use Cases</a></li>
 <li><a href="design/sitemap-2">Sitemap</a></li>
-<li><a href="design/index">Index Page Information Architecture</a></li>
-<li><a href="design/entry">Entry Page Information Architecture</a></li>
 <li><a href="design/mockup">Mockup Site</a></li>
 </ul>
 </div>
