--- a/practices/index.html
+++ b/practices/index.html
@@ -29,7 +29,7 @@ Are pratices categories of metrics and/or measurements? Probably of metrics, as 
 <li><a href="#technical-documentation">Technical Documentation</a></li>
 </ul></li>
 </ul></li>
-<li><a href="#experience">Experience</a>
+<li><a href="#design">Design</a>
 <ul>
 <li><a href="#users">Users</a>
 <ul>
@@ -37,7 +37,7 @@ Are pratices categories of metrics and/or measurements? Probably of metrics, as 
 <li><a href="#skills">Skills</a></li>
 <li><a href="#frustrations">Frustrations</a></li>
 </ul></li>
-<li><a href="#design">Design</a>
+<li><a href="#design-1">Design</a>
 <ul>
 <li><a href="#education">Education</a></li>
 <li><a href="#usability">Usability</a></li>
@@ -51,9 +51,9 @@ Are pratices categories of metrics and/or measurements? Probably of metrics, as 
 <li><a href="#threatenvironment">ThreatEnvironment</a></li>
 </ul></li>
 </ul></li>
-<li><a href="#developer">Developer</a>
+<li><a href="#policy">Policy</a>
 <ul>
-<li><a href="#contributor">Contributor</a>
+<li><a href="#team">Team</a>
 <ul>
 <li><a href="#security-team">Security Team</a></li>
 <li><a href="#ux-team">UX Team</a></li>
@@ -90,7 +90,7 @@ Are pratices categories of metrics and/or measurements? Probably of metrics, as 
 <h4 id="devops">Devops</h4>
 <h4 id="distribution">Distribution</h4>
 <h4 id="technical-documentation">Technical Documentation</h4>
-<h2 id="experience">Experience</h2>
+<h2 id="design">Design</h2>
 <h3 id="users">Users</h3>
 <blockquote>
 <p>User's reviews, support requests,...</p>
@@ -101,7 +101,7 @@ Are pratices categories of metrics and/or measurements? Probably of metrics, as 
 <h4 id="sentiment">Sentiment</h4>
 <h4 id="skills">Skills</h4>
 <h4 id="frustrations">Frustrations</h4>
-<h3 id="design">Design</h3>
+<h3 id="design-1">Design</h3>
 <h4 id="education">Education</h4>
 <h4 id="usability">Usability</h4>
 <h4 id="disclosuresnotifications">Disclosures/Notifications</h4>
@@ -110,8 +110,8 @@ Are pratices categories of metrics and/or measurements? Probably of metrics, as 
 <h4 id="rights">Rights</h4>
 <h4 id="license">License</h4>
 <h4 id="threatenvironment">ThreatEnvironment</h4>
-<h2 id="developer">Developer</h2>
-<h3 id="contributor">Contributor</h3>
+<h2 id="policy">Policy</h2>
+<h3 id="team">Team</h3>
 <blockquote>
 <p>Individual Contributors, Developers...</p>
 </blockquote>
