Clean and added architecture

--- a/framework/workflow/index.html
+++ b/framework/workflow/index.html
@@ -38,17 +38,17 @@
 <blockquote>
 <p>From Impact story to Measurement Data</p>
 </blockquote>
-<p>Impact</p>
+<p><em>Impact</em></p>
 <ul>
-<li>User submits new story about Iran 2FA hacking -&gt; Impact (partner) <a href="https://code.iilab.org/openintegrity/framework/issues/1">#1</a> <a href="https://code.iilab.org/openintegrity/framework/issues/2">#2</a> <a href="https://code.iilab.org/openintegrity/framework/issues/4">#4</a></li>
-<li>Relevant Impact Group users get notified <a href="https://code.iilab.org/openintegrity/framework/issues/5">#5</a></li>
-<li>Verification -&gt; Impact (review) <a href="https://code.iilab.org/openintegrity/framework/issues/3">#3</a></li>
-<li>New attack pattern -&gt; Impact (analysis) <a href="https://code.iilab.org/openintegrity/framework/issues/3">#3</a> <a href="https://code.iilab.org/openintegrity/framework/issues/6">#6</a></li>
+<li>User submits new story about Iran two-factor authentication hacking -&gt; Impact (partner) <a href="https://code.iilab.org/openintegrity/framework/issues/1">#1</a> <a href="https://code.iilab.org/openintegrity/framework/issues/2">#2</a> <a href="https://code.iilab.org/openintegrity/framework/issues/4">#4</a></li>
+<li>Relevant Impact Group (for instance partners knowledgeable about and interested in Iran) get notified <a href="https://code.iilab.org/openintegrity/framework/issues/5">#5</a></li>
+<li>The story is looked at and a level of verification is assigned -&gt; Impact (review) <a href="https://code.iilab.org/openintegrity/framework/issues/3">#3</a></li>
+<li>Given that this is a new type attack, a new attack pattern is created -&gt; Impact (analysis) <a href="https://code.iilab.org/openintegrity/framework/issues/3">#3</a> <a href="https://code.iilab.org/openintegrity/framework/issues/6">#6</a></li>
 </ul>
-<p>Practice</p>
+<p><em>Practice</em></p>
 <ul>
+<li>Notification of Communities of Practice - such as technology specialists <a href="https://code.iilab.org/openintegrity/framework/issues/8">#8</a></li>
 <li>Browsing of relevant issues that need attention <a href="https://code.iilab.org/openintegrity/framework/issues/7">#7</a></li>
-<li>Notification of Communities of Practice <a href="https://code.iilab.org/openintegrity/framework/issues/8">#8</a></li>
 <li>Debate Mitigation techniques (across multiple expertises) -&gt; Practice (discuss) <a href="https://code.iilab.org/openintegrity/framework/issues/7">#7</a></li>
 <li>Consensus on Best Practices -&gt; Practice (decision) <a href="https://code.iilab.org/openintegrity/framework/issues/8">#8</a></li>
 </ul>
